# infoc-win32-rs

./: .gitignore  Cargo.toml  README.md  chkl_data.xlsx  mapping.csv  microkv_debug.kv
.cargo/: config
.github/workflows/: rust.yml
infoc/: Cargo.toml
infoc/src/: lib.rs
infoc_client/: Cargo.toml
infoc_client/%TEMP%/: index
infoc_client/.cargo/: config
infoc_client/src/: main.rs
infoc_server/: Cargo.toml  microkv.kv  microkv_debug.kv
infoc_server/src/: lib.rs  main.rs
