[package]
name = "infoc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.4.0"
futures = "0.3.28"
rkyv = { version = "0.7.41", features = ["copy_unsafe", "validation", "indexmap"] }
serde = { version = "1.0.159", features = ["alloc", "derive", "unstable"] }
strum = { version = "0.24.1", features = ["derive", "phf", "strum_macros"] }
strum_macros = "0.24.3"
tokio = { version = "1.27.0", features = ["full"] }
tokio-util = { version = "0.7.7", features = ["full"] }
