[package]
name = "infoc_client"
version = "0.1.0"
edition = "2021"
authors = ["B83C <b83c@outlook.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
inquire = "0.6.1"
infoc = { path = "../infoc"}
smbios-lib = "0.9.0"
windows = { version = "0.48.0", features = ["Win32_Storage_FileSystem", "Win32_Foundation", "Win32_Security", "Win32_System_IO", "Win32_System_Ioctl", "Win32_System_SystemInformation", "Win32_System_WindowsProgramming"] }
winreg = "0.50.0"
default-net = "0.14.1"
os_info = "3.7.0"

