[package]
name = "infoc_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.2", features = ["derive"] }
infoc = { path = "../infoc" }
microkv = "0.2.9"
rust_xlsxwriter = { version = "0.34.0", features = ["zlib"] }
